# community_backend

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/: auth.py  communities.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  community.py  unit.py  unit_member.py  user.py  user_profile.py
app/repositories/: community_repository.py  unit_member_repository.py  unit_repository.py  user_profile_repository.py  user_repository.py
app/schemas/: auth_schema.py  community_schema.py
app/services/: auth_service.py  community_service.py
